Fixed the masonry spacing

--- a/main.css
+++ b/main.css
@@ -217,10 +217,10 @@ span.glyphicon-chevron-down {
 .grid-item {
   float: left;
   border: 2px solid hsla(0, 0%, 0%, 0.5);
-  width: 215px;
+  width: 200px;
   margin-top: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
   padding:0;
   border-radius:5px;
 }
@@ -229,7 +229,6 @@ span.glyphicon-chevron-down {
   padding: 5px;
   text-align:center;
   font-size:16px;
-  /*background-color: #ecf0f1;*/
   border-radius: 5px;
 }
 
